<?xml version="1.0"?>
<package format="2">
  <name>dso</name>
  <version>0.0.0</version>
  <description>The dso package</description>

  <maintainer email="yex4abt@todo.todo">yex4abt</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>cv_bridge</depend>


  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>image_transport</depend>



  <!--depend>catkin_virtualenv</depend-->


  <exec_depend>message_runtime</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->

  <export>

  </export>
</package>
